# Scacchi

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: alfiere.cpp.6995A0506CE3DC87.idx  alfiere.hpp.BD58C632ACCFFD88.idx  cavallo.cpp.ACBE0974E0026B51.idx  cavallo.hpp.BE201DB9F32AC0E3.idx  gioco.cpp.02A49F89BCAA1047.idx  gioco.hpp.789B2258C92EEB63.idx  glad.c.0E64DDC2188BC088.idx  glad.h.CADF2BECD9C0EC32.idx  khrplatform.h.C886A69BF57FDC3C.idx  main.cpp.BAFCCB0C2BB3764B.idx  pedone.cpp.03312E11253816B8.idx  pedone.hpp.BF44621A820492CB.idx  pezzo.cpp.351519F5B4599F77.idx  pezzo.hpp.9BA99CF5A8167EB2.idx  re.cpp.9327E196C74B1534.idx  re.hpp.9CD0A4AC6556AEF2.idx  regina.cpp.CD4FCAD7BA8905F6.idx  regina.hpp.327D0929EC82BEEC.idx  torre.cpp.316A9907A4030CFE.idx  torre.hpp.8C932423B86D0EB8.idx  utils.hpp.561A5F9DC910D324.idx
.zed/: tasks.json
Shaders/: pezzo.fs  pezzo.vs  scacchiera.fs  scacchiera.vs
includes/: gioco.hpp  pezzo.hpp  resourceManager.hpp  shader.hpp  texture.hpp  utils.hpp
includes/Pezzi/: alfiere.hpp  cavallo.hpp  pedone.hpp  re.hpp  regina.hpp  torre.hpp
includes/glad/: glad.h
src/: alfiere.cpp  cavallo.cpp  gioco.cpp  glad.c  main.cpp  pedone.cpp  pezzo.cpp  re.cpp  regina.cpp  resourceManager.cpp  shader.cpp  texture.cpp  torre.cpp  utils.cpp
